--- a/templates/dashboard/pages/setQuote/setQuote.html
+++ b/templates/dashboard/pages/setQuote/setQuote.html
@@ -1,5 +1,5 @@
 {{> header}}
-<div class='edit-trips'>
-    <div class='edit-trips-content'>
+<div class='quote-trips'>
+    <div class='quote-trips-content'>
     </div>
 </div> 
