--- a/templates/dashboard/pages/uploadfiles.html
+++ b/templates/dashboard/pages/uploadfiles.html
@@ -1,4 +1,7 @@
 {{{{raw-helper}}}}
+<style>
+.file_type{width:40px;height:40px;padding:5px;text-align:center}
+</style>
 {{{{/raw-helper}}}}
 {{> header}}
 <div class='upload-files'>
