--- a/templates/dashboard/pages/uploadfiles/uploadfiles.html
+++ b/templates/dashboard/pages/uploadfiles/uploadfiles.html
@@ -48,7 +48,7 @@
        </button>
      
         <button type="button" class="btn btn-default" aria-label="Left Align" id="actiondownload">
-           <span class="fa fa-download fa-lg" aria-hidden="true" id="actiondelete"></span>
+           <span class="fa fa-download fa-lg" aria-hidden="true" id="actiondownload"></span>
        </button>
        </div>
 
