--- a/templates/dashboard/pages/viewTripRequests/viewTripRequests.html
+++ b/templates/dashboard/pages/viewTripRequests/viewTripRequests.html
@@ -157,6 +157,7 @@
         <div class="col-sm-12">
             <div class="pull-right">
                 <button type="button" class="btn btn-default btn-primary approve-bid" _id="{{_id}}">Approve</button>
+                 <button type="button" class="btn btn-default btn-primary reject-bid" _id="{{_id}}">Reject</button>
             </div>
         </div>       
     </div>
