--- a/templates/dashboard/pages/newTrips/newTrips.html
+++ b/templates/dashboard/pages/newTrips/newTrips.html
@@ -179,9 +179,9 @@
         <div class="col-sm-12">
             <div class="pull-right">
                 <button type="button" class="btn btn-default btn-primary comments-trip" _id="{{_id}}">Comments</button>
-                 <button type="button" class="btn btn-default btn-primary set-status-trip" _id="{{_id}}">Set Status</button>
-<!--                 <button type="button" class="btn btn-default btn-primary driver-details-trip" _id="{{_id}}">Set Driver Details</button> -->
-<!--                 <button type="button" class="btn btn-default btn-primary quote-trip" _id="{{_id}}">Set Quote</button> -->
+                <button type="button" class="btn btn-default btn-primary cancel-trip" _id="{{_id}}">Cancel</button>
+                <button type="button" class="btn btn-default btn-primary view-trip" _id="{{_id}}">View</button>
+                <button type="button" class="btn btn-default btn-primary upload-doc-trip" _id="{{_id}}">Upload docs</button>
                 <button type="button" class="btn btn-default btn-primary edit-trip" _id="{{_id}}">Edit</button>
             </div>
         </div>       
